; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_netcp_core.c_set_pkt_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_netcp_core.c_set_pkt_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knav_dma_desc = type { i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, %struct.knav_dma_desc*)* @set_pkt_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_pkt_info(i32 %0, i32 %1, i32 %2, %struct.knav_dma_desc* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.knav_dma_desc*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.knav_dma_desc* %3, %struct.knav_dma_desc** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i8* @cpu_to_le32(i32 %9)
  %11 = load %struct.knav_dma_desc*, %struct.knav_dma_desc** %8, align 8
  %12 = getelementptr inbounds %struct.knav_dma_desc, %struct.knav_dma_desc* %11, i32 0, i32 2
  store i8* %10, i8** %12, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @cpu_to_le32(i32 %13)
  %15 = load %struct.knav_dma_desc*, %struct.knav_dma_desc** %8, align 8
  %16 = getelementptr inbounds %struct.knav_dma_desc, %struct.knav_dma_desc* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i8* @cpu_to_le32(i32 %17)
  %19 = load %struct.knav_dma_desc*, %struct.knav_dma_desc** %8, align 8
  %20 = getelementptr inbounds %struct.knav_dma_desc, %struct.knav_dma_desc* %19, i32 0, i32 0
  store i8* %18, i8** %20, align 8
  ret void
}

declare dso_local i8* @cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
